<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rg_income_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toTopOf="parent"
            segmentedgroup:layout_constraintEnd_toEndOf="parent"
            segmentedgroup:layout_constraintStart_toStartOf="parent"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_checked_text_color="@color/white"
            segmentedgroup:sc_corner_radius="3dp"
            segmentedgroup:sc_tint_color="@color/colorAccent">

            <RadioButton
                android:id="@+id/btn_income"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/btn_expense"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expense" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <EditText
            android:id="@+id/et_transaction_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/transaction_amount"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_income_expense" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_transaction_sum"
            tools:layout_editor_absoluteY="187dp"
            tools:listitem="@layout/item_transaction_category" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/greyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_categories" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_wallets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider"
            tools:listitem="@layout/item_wallet_type" />

        <View
            android:id="@+id/view_divider_wallets"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/greyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_wallets" />

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rg_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_wallets"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_checked_text_color="@color/white"
            segmentedgroup:sc_corner_radius="2dp"
            segmentedgroup:sc_tint_color="@color/colorAccent">

            <RadioButton
                android:id="@+id/btn_every_day"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/every_day"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/btn_every_three_days"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/every_three_days"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/btn_every_week"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/every_week"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/btn_every_month"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/every_month"
                android:textAllCaps="true" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <EditText
            android:id="@+id/et_comment_on_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/please_type_here_short_comment"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_period" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/switch_is_template">

            <Button
                android:id="@+id/btn_create_as_transaction"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/app_margin"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/create"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="416dp" />

        <Switch
            android:id="@+id/switch_is_template"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/save_as_draft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_comment_on_transaction" />


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>