...
    <string name="settings_username">Пользователь</string>
    <string name="developer_sign">© 2018 #Lounah</string>
    <string name="system_prefs">Cистемные настройки</string>
    <string name="success_deletion_result">Данные успешно удалены</string>
    <string name="add_wallet">Новый кошелек</string>
    <string name="wallet_successfully_created">Кошелек успешно создан!</string>
    <string name="please_fill_all_fields">Пожалуйста,заполните все поля</string>

    <!--Wallet screen-->
    <string name="savings">Сбережения</string>
    <string name="current_balance">Текущий баланс</string>
    <string name="create_transaction">Добавить транзакцию</string>
    <string name="transaction_category">Категория транзакции</string>
...
