...
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_checked_text_color="@color/white"
        segmentedgroup:sc_corner_radius="2dp"
        segmentedgroup:sc_tint_color="@color/colorAccent">

        <RadioButton
            android:id="@+id/btn_rub"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rub" />

...
