...
                android:layout_height="wrap_content"
                android:text="@string/expenses" />

        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tl_transaction_types"
            android:background="@color/settingsBackgroundColor"
            android:clipToPadding="false"
            app:stackFromEnd="false" />
...
